Creado mediante Colaboratory

--- a/DS_Proyecto_01.ipynb
+++ b/DS_Proyecto_01.ipynb
@@ -81,24 +81,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wfyEgpsONzTm"
-      },
-      "source": [
-        "---\n",
-        "\n",
-        "<br />\n",
-        "<br />\n",
-        "\n",
-        "# RESPONDER SECCIÓN 1 ANTES DE CONTINUAR\n",
-        "<br />\n",
-        "<br />\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "LvPBQzg5C4OI"
       },
       "source": [
@@ -138,7 +120,7 @@
         "id": "fCGVacN5C4OM"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR "
       ],
       "execution_count": null,
       "outputs": []
@@ -158,7 +140,7 @@
         "id": "YL2eAd_tC4Oa"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR"
       ],
       "execution_count": null,
       "outputs": []
@@ -178,7 +160,7 @@
         "id": "1QletBbgC4Oi"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR "
       ],
       "execution_count": null,
       "outputs": []
@@ -198,7 +180,7 @@
         "id": "KvVxaqPlC4Oq"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR"
       ],
       "execution_count": null,
       "outputs": []
@@ -218,7 +200,7 @@
         "id": "JvrB-EaoC4Ox"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR"
       ],
       "execution_count": null,
       "outputs": []
@@ -238,7 +220,7 @@
         "id": "vbmACahUC4O6"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR"
       ],
       "execution_count": null,
       "outputs": []
@@ -266,7 +248,7 @@
         "id": "jDQy8tzfC4PA"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR"
       ],
       "execution_count": null,
       "outputs": []
@@ -286,7 +268,7 @@
         "id": "4DJ-aGD-C4PG"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR"
       ],
       "execution_count": null,
       "outputs": []
@@ -310,7 +292,7 @@
         "id": "CJ_DINqMC4PM"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR -"
       ],
       "execution_count": null,
       "outputs": []
@@ -355,7 +337,7 @@
         "id": "QSqa1vJQC4PR"
       },
       "source": [
-        "# COMPLETAR - AGREGAR TANTAS CELDAS COMO SEA NECESARIO"
+        "# COMPLETAR -"
       ],
       "execution_count": null,
       "outputs": []
