--- a/Properati_analisys.ipynb
+++ b/Properati_analisys.ipynb
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
        "[81019 rows x 6 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,11 +2046,7 @@
    "source": [
     "baseML0 = pd.read_csv(\"DS_Proyecto_01_Datos_Properati.csv\",sep=',') #cargar datasaet\n",
     "columns = ['rooms', 'bedrooms','bathrooms','surface_total','surface_covered','price'] #definir atributos/columnas necesarias\n",
-    "baseML1 = baseML0[\n",
-    "                baseML0.property_type.isin(['Departamento', 'Casa' , 'PH']) \n",
-    "                  & baseML0.l2.isin(['Capital Federal'])\n",
-    "                  & (baseML0.surface_total >=15) & (baseML0.surface_total <=1000)\n",
-    "                  & (baseML0.price <= 4000000)]\n",
+    "baseML1 = baseML0[baseML0.property_type.isin(['Departamento', 'Casa' , 'PH']) & baseML0.l2.isin(['Capital Federal']) & (baseML0.surface_total >=15) & (baseML0.surface_total <=1000) & (baseML0.price <= 4000000)]\n",
     "#aplicar filtror requeridos\n",
     "\n",
     "baseML1[columns].dropna()  #invocar la base con los filtros requeridos y que elimite nulls\n"
