--- a/DS_Proyecto_01(Rodriguez Luis).ipynb
+++ b/DS_Proyecto_01(Rodriguez Luis).ipynb
@@ -1514,7 +1514,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<seaborn.axisgrid.PairGrid at 0x233001f6970>"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sns.pairplot(data = datapd2, hue = 'property_type',height=10, aspect=4,)\n",
     "#sns.color_palette(\"Blues\", as_cmap=True)"
