--- a/DS_Proyecto_01(Rodriguez Luis).ipynb
+++ b/DS_Proyecto_01(Rodriguez Luis).ipynb
@@ -1742,7 +1742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.1 CREAMOS**"
+    "### 3.1 Base y librerias"
    ]
   },
   {
@@ -2088,7 +2088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.1.1 Benchmark**"
+    "### 3.2 Benchmark"
    ]
   },
   {
@@ -2285,12 +2285,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3.3 Modelos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Definicion de las variables con las que va a trabajar el modelo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2353,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -2362,7 +2369,7 @@
        "Text(0, 0.5, 'Error')"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2395,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2428,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -2437,7 +2444,7 @@
        "Text(0, 0.5, 'Error')"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     },
